moved navbar to top

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://www.timothyahong.com
 title: Timothy Ahong
 subtitle: Aerospace Engineer
 author: Timothy Ahong
